--- a/RLStudio-params.yml
+++ b/RLStudio-params.yml
@@ -10,6 +10,8 @@ Agent: f1
 # Options: train, test
 Method: train 
 
+Train_hours: 2
+
 # Hyperparams
 Hyperparams: 
   alpha: 0.8
@@ -32,7 +34,7 @@ envs_params:
     launch: simple_circuit.launch
     #gaz_pos: gazebo_positions_simple  # Change
     #start_pose: gazebo_positions_simple
-    alternate_pose: True
+    alternate_pose: False
     estimated_steps: 40_000 #original 4000
     sensor: camera
 
@@ -48,6 +50,9 @@ debug_level: 0
 telemetry: False
 telemetry_mask: False
 plotter_graphic: False
+save_every_episode: 1
+save_episodes: 250
+save_every_step: 100
 my_board: True
 save_positions: False
 save_model: True
