--- a/RLStudio-params.yml
+++ b/RLStudio-params.yml
@@ -18,8 +18,8 @@ Hyperparams:
   gamma: 0.9
   epsilon: 0.99
   epsilon_discount: 0.9986
-  highest_reward: 4_000
-  total_episodes: 20_000
+  #highest_reward: 0
+  total_episodes: 2
 
 # Options: simple, nurburgring, montreal, curves, manual
 Model: simple
@@ -35,24 +35,21 @@ envs_params:
     #gaz_pos: gazebo_positions_simple  # Change
     #start_pose: gazebo_positions_simple
     alternate_pose: False
-    estimated_steps: 40_000 #original 4000
+    estimated_steps: 100 #original 4000
     sensor: camera
 
 
-Title: ---------------  JdeROBOT ---------------
-Description: --------------- QLEARN - Camera ---------------
-Lets_go: --------------- GO!! ---------------
-Eop: --------------- TRAINING COMPLETED ---------------
-RaceCompleted: --------------- RACE COMPLETED---------------
-
-
+# Flags
 debug_level: 0
 telemetry: False
 telemetry_mask: False
 plotter_graphic: False
+
 save_every_episode: 1
-save_episodes: 250
+save_episodes: 1
 save_every_step: 100
+highest_reward: 0
+
 my_board: True
 save_positions: False
 save_model: True
@@ -63,9 +60,6 @@ lap_completed: False
 #output_dir: "./logs/qlearn_models/qlearn_camera_solved/"
 
 max_distance: 0.5
-
-
-
 
 #available_actions_simple: 
 #  0: (3,0)  
@@ -104,3 +98,9 @@ max_distance: 0.5
 #                 (2, -272.93, -17.70, 0, 0.0001, 0.001, 0.48, 0.87),
 #                 (3, -132.73, 55.82, 0, 0.0030, 0.0041, -0.02, 0.9991),
 #                 (4, 294.99, 91.54, 0, 0.0043, -0.0027, 0.14, 0.99)]                  
+
+Title: ---------------  JdeROBOT ---------------
+Description: --------------- QLEARN - Camera ---------------
+Lets_go: --------------- GO!! ---------------
+Eop: --------------- TRAINING COMPLETED ---------------
+RaceCompleted: --------------- RACE COMPLETED---------------
